# LearnWebGPU

./: .gitignore  CMakeLists.txt  README.md
LearnWebGPU/: Application.cpp  Application.h  CMakeLists.txt  Main.cpp  ResourceManager.cpp  ResourceManager.h  stb_image.h  tiny_obj_loader.h  webgpu-utils.cpp
LearnWebGPU/resources/: shader.wgsl
LearnWebGPU/web/: shell.html
